--- a/inspectit-ocelot/nginx/html/index.html
+++ b/inspectit-ocelot/nginx/html/index.html
@@ -8,7 +8,7 @@
 
 <h1>Metrics</h1>
 <ul>
-    <li><a href="https://localhost:3000">Grafana (Overview)</a> [admin:demo]</li>
+    <li><a href="https://localhost:3000">Grafana (Overview)</a></li>
     <li><a href="https://localhost:8888">Chronograf (Explorer)</a></li>
 </ul>
 
