--- a/inspectit-ocelot/nginx/html/index.html
+++ b/inspectit-ocelot/nginx/html/index.html
@@ -1,20 +1,20 @@
 
 <h1>Inspectit Ocelot Agent</h1>
 <ul>
-    <li><a href="https://localhost:8090">Ocelot Config Server</a> [admin:demo]</li>
-    <li><a href="https://localhost/inspectit-ocelot-agent.jar">Agent Download</a></li>
-    <li><a href="https://localhost/config.yml">Example Config Download</a></li>
+    <li><a href="https://inspectit-ocelot:8090">Ocelot Config Server</a> [admin:demo]</li>
+    <li><a href="https://inspectit-ocelot/inspectit-ocelot-agent.jar">Agent Download</a></li>
+    <li><a href="https://inspectit-ocelot/config.yml">Example Config Download</a></li>
 </ul>
 
 <h1>Metrics</h1>
 <ul>
-    <li><a href="https://localhost:3000">Grafana (Overview)</a></li>
-    <li><a href="https://localhost:8888">Chronograf (Explorer)</a></li>
+    <li><a href="https://inspectit-ocelot:3000">Grafana (Overview)</a></li>
+    <li><a href="https://inspectit-ocelot:8888">Chronograf (Explorer)</a></li>
 </ul>
 
 <h1>Logs</h1>
 
 <ul>
-    <li><a href="https://localhost:16686">Jaeger Query (Overview)</a></li>
-    <li><a href="https://localhost:5601">Kibana (Explorer)</a></li>
+    <li><a href="https://inspectit-ocelot:16686">Jaeger Query (Overview)</a></li>
+    <li><a href="https://inspectit-ocelot:5601">Kibana (Explorer)</a></li>
 </ul>
