--- a/inspectit-ocelot/nginx/html/index.html
+++ b/inspectit-ocelot/nginx/html/index.html
@@ -2,7 +2,7 @@
 <h1>Inspectit Ocelot Agent</h1>
 <ul>
     <li><a href="https://inspectit-ocelot:8090">Ocelot Config Server</a> [admin:demo]</li>
-    <li><a href="https://inspectit-ocelot/inspectit-ocelot-agent.jar">Agent Download</a></li>
+    <li><a href="https://inspectit-ocelot/inspectit-ocelot-agent-2.4.1.jar">Agent Download</a></li>
     <li><a href="https://inspectit-ocelot/config.yml">Example Config Download</a></li>
 </ul>
 
